--- a/index.html
+++ b/index.html
@@ -40,11 +40,53 @@
                     <div class="about">
                         <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"/></svg>
                         <p>About</p>
+                        <div class="about-text hide">
+                            <svg class="about-close close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"/></svg>
+                            <p class="about-header">About</p>
+                            <p class="about-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat asperiores fugiat voluptate beatae. Ad corporis quae, hic nulla ullam totam porro quo nisi. Deleniti culpa consequuntur similique labore iusto dignissimos.</p>
+
+                        </div>
+                    </div>
+                    <div class="user-profile">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"/></svg>
+                        <p>Log in</p>
+                        <div class="user-auth-div hide">
+                            <div class="login-div">
+                                <svg class="login-div-close close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"/></svg>
+                                <p class="auth-header">Sign in to your account</p>
+                                <label for="login-email">Email:</label>
+                                <input type="text" name="login-email" class="login-email">
+                                <label for="login-password">Password:</label>
+                                <input type="password" class="login-password" name="login-password">
+                                <button class="login-btn">Log in</button>
+                                <p class="action-here">Don't have an account? <span class="signup-here auth-link">Sign up here</span>.</p>
+                                <p class="account-warning">This does not refer to your twitter account details. This is an account to allow you use extra features of the explore app.</p>
+                            </div>
+                            <div class="signup-div">
+                                <svg class="signup-div-close close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"/></svg>
+                                <p class="auth-header">Create a new account</p>
+                                <label for="signup-name">Name:</label>
+                                <input type="text" name="signup-name" class="signup-name">
+                                <label for="signup-email">Email:</label>
+                                <input type="text" name="signup-email" class="signup-email">
+                                <label for="signup-password">Password:</label>
+                                <input type="password" class="signup-password" name="signup-password">
+                                <label for="signup-confirm-password">Confirm password:</label>
+                                <input type="password" class="signup-confirm-password" name="signup-confirm-password">
+                                <button class="signup-btn">Sign up</button>
+                                <p class="action-here">Already have an account? <span class="login-here auth-link">Log in here</span>.</p>
+                                <p class="account-warning">This does not refer to your twitter account details. This is an account to allow you use extra features of the explore app.</p>
+                            </div>
+                            <div class="logout-div">
+                                <svg class="logout-div-close close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"/></svg>
+                                <button class="logout-btn">Log out</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
                 <div class="center-container">
-                    <div class="home-search-page">
+                    <div class="home-search-page hide">
                         <h1 class="home-logo">explore</h1>
                         <div class="main-search-input-div">
                             <input type="search" class="main-search-input" placeholder="Search for anything on twitter" autocomplete="off" autocorrect="off" autocapitalize="none" spellcheck="false" onkeydown = "if (event.keyCode == 13)
@@ -95,17 +137,25 @@
                             </div>
                         </div>
                     </div>
-                    <div class="timeline-search-page">
-
+                    <div class="timeline-search-page hide">
+                        <h1 class="timeline-header">explore <span class="timeline-subheader"> <span class="timeline-header-slash"> / </span> user timelines</span></h1>
+                        <div class="timeline-search-input-div">
+                            <input type="search" class="timeline-search-input results-search-input" placeholder="Enter a username" autocomplete="off" autocorrect="off" autocapitalize="none" spellcheck="false" onkeydown = "if (event.keyCode == 13)
+                            document.querySelector('#timeline-search-button').click()">
+                            <span class="material-icons timeline-search-icon">search</span>
+                        </div>
+                        <button class="timeline-search-button" id="timeline-search-button">Search</button>
                     </div>
                     <div class="search-results">
-                        <div class="search-header">
-                            <p>Showing results for hello</p>
-                        </div>
                         <div class="main-search-input-div">
                             <input type="search" class="main-search-input results-search-input" placeholder="Search for anything on twitter" autocomplete="off" autocorrect="off" autocapitalize="none" spellcheck="false" onkeydown = "if (event.keyCode == 13)
                             document.querySelector('#main-search-button').click()">
                             <span class="material-icons  main-search-icon">search</span>
+                        </div>
+                        <div class="timeline-search-input-div">
+                            <input type="search" class="timeline-search-input results-search-input" placeholder="Enter a username" autocomplete="off" autocorrect="off" autocapitalize="none" spellcheck="false" onkeydown = "if (event.keyCode == 13)
+                            document.querySelector('#timeline-search-button').click()">
+                            <span class="material-icons timeline-search-icon">search</span>
                         </div>
                         <div class=tweet-results-div>
                             <div class="tweet-result">
@@ -133,11 +183,77 @@
                                             <div class="save-to-collection">
                                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M17 3H7c-1.1 0-1.99.9-1.99 2L5 21l7-3 7 3V5c0-1.1-.9-2-2-2zm0 15l-5-2.18L7 18V5h10v13z"/></svg>
                                                 <p>Save to collection</p>
+                                                <div class="save-to-collection-prompt">
+                                                    <!-- <svg class="save-to-collection-close close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"/></svg> -->
+                                                    <div class="save-to-collection-item">
+                                                        Collection One
+                                                    </div>
+                                                    <div class="save-to-collection-item">
+                                                        Collection Two
+                                                    </div>
+                                                    <div class="save-to-collection-item">
+                                                        Collection Two
+                                                    </div>
+                                                    <div class="save-to-collection-item">
+                                                        Collection Two
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
                                         <p class="replying-to">This tweet is a reply to:</p>
                                     </div>
                                 </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="collections-page hide">
+                        <h1 class="collections-page-header">Your collections</h1>
+                        <p class="collection-count">You currently have 5 collections</p>
+                        <div class="collections-list">
+                            <div class="collection-item" data-selected="true">
+                                <p>Collection One</p>
+                            </div>
+                            <div class="collection-item" data-selected="false">
+                                <p>Collection Two</p>
+                            </div>
+                        </div>
+                        <div class="collection-results">
+                            <div class="collection-result-item">
+                                <div class="collection-tweet-user-image">
+                                    <img src="./assets/lightning-5511473_640.jpg" alt="">
+                                </div>
+                                <div class="collection-tweet-body">
+                                    <div class="collection-tweet-name-div">
+                                        <p class="collection-tw-name-item collection-tweet-name">Name</p>
+                                        <span class="collection-verified material-icons collection-tw-name-item">verified</span>
+                                        <p class="collection-tw-name-item collection-tweet-username">Username &middot; </p>
+                                        <p class="collection-tw-name-item collection-tweet-time">Time</p>
+                                    </div>
+                                    <p class="collection-tweet-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis doloribus dolores nesciunt ex omnis, veritatis inventore harum atque repudiandae facere, laboriosam beatae earum nisi pariatur quia natus nemo corrupti fugiat.</p>
+                                    <div  class="collection-tweet-image">
+                                        <img src="./assets/lightning-5511473_640.jpg" alt="Tweet Media">
+                                    </div>
+                                    <div>
+                                        <div class="collection-tweet-footer">
+                                            <div class="collection-tweet-metrics">
+                                                <p>Replies:</p>
+                                                <p>Retweets:</p>
+                                                <p>Likes:</p>
+                                            </div>
+                                            <div class="remove-from-collection">
+                                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M17 3H7c-1.1 0-1.99.9-1.99 2L5 21l7-3 7 3V5c0-1.1-.9-2-2-2zm0 15l-5-2.18L7 18V5h10v13z"/></svg>
+                                                <p>Delete from collection</p>
+                                                <div class="remove-from-collection-prompt">
+                                                    Are you sure?
+                                                    <div class="remove-prompt-buttons">
+                                                        <button class="remove-prompt-dont-delete">Don't delete</button>
+                                                        <button class="remove-prompt-delete">Delete, please</button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <p class="replying-to">This tweet is a reply to:</p>
+                                    </div>
                             </div>
                         </div>
                     </div>
