--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
         <main>
             <div class="main-container">
                 <div class="side-nav-container">
-                    <div class="home">
+                    <div class="home side-nav-item">
                         <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0z" fill="none"/><path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/></svg>
                         <p>Home</p>
                     </div>
-                    <div class="time-travel">
+                    <div class="time-travel side-nav-item">
                         <svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" height="24" viewBox="0 0 24 24" width="24"><g><rect fill="none" height="24" width="24"/></g><g><g><g><path d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M16.2,16.2L11,13V7h1.5v5.2l4.5,2.7L16.2,16.2z"/></g></g></g></svg>
                         <p>Search Timeline</p>
                     </div>
-                    <div class="collections">
+                    <div class="collections side-nav-item">
                         <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0z" fill="none"/><path d="M17 3H7c-1.1 0-1.99.9-1.99 2L5 21l7-3 7 3V5c0-1.1-.9-2-2-2z"/></svg>
                         <p>Collections</p>
                     </div>
-                    <div class="about">
+                    <div class="about side-nav-item">
                         <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"/></svg>
                         <p>About</p>
                         <div class="about-text hide">
@@ -47,11 +47,11 @@
 
                         </div>
                     </div>
-                    <div class="user-profile">
+                    <div class="user-profile side-nav-item">
                         <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"/></svg>
                         <p>Log in</p>
-                        <div class="user-auth-div hide">
-                            <div class="login-div">
+                        <!-- <div class="user-auth-div hide">
+                            <div class="login-div hide">
                                 <svg class="login-div-close close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"/></svg>
                                 <p class="auth-header">Sign in to your account</p>
                                 <label for="login-email">Email:</label>
@@ -62,7 +62,7 @@
                                 <p class="action-here">Don't have an account? <span class="signup-here auth-link">Sign up here</span>.</p>
                                 <p class="account-warning">This does not refer to your twitter account details. This is an account to allow you use extra features of the explore app.</p>
                             </div>
-                            <div class="signup-div">
+                            <div class="signup-div hide">
                                 <svg class="signup-div-close close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"/></svg>
                                 <p class="auth-header">Create a new account</p>
                                 <label for="signup-name">Name:</label>
@@ -77,10 +77,42 @@
                                 <p class="action-here">Already have an account? <span class="login-here auth-link">Log in here</span>.</p>
                                 <p class="account-warning">This does not refer to your twitter account details. This is an account to allow you use extra features of the explore app.</p>
                             </div>
-                            <div class="logout-div">
+                            <div class="logout-div hide">
                                 <svg class="logout-div-close close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"/></svg>
                                 <button class="logout-btn">Log out</button>
                             </div>
+                        </div> -->
+                    </div>
+                    <div class="user-auth-div hide">
+                        <div class="login-div hide">
+                            <svg class="login-div-close close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"/></svg>
+                            <p class="auth-header">Sign in to your account</p>                          
+                            <input type="text" name="login-email" class="login-email">
+                            <label for="login-email">Email:</label>                           
+                            <input type="password" class="login-password" name="login-password">
+                            <label for="login-password">Password:</label>
+                            <button class="login-btn">Log in</button>
+                            <p class="action-here">Don't have an account? <span class="signup-here auth-link">Sign up here</span>.</p>
+                            <p class="account-warning">This does not refer to your twitter account details. This is an account to allow you use extra features of the explore app.</p>
+                        </div>
+                        <div class="signup-div hide">
+                            <svg class="signup-div-close close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"/></svg>
+                            <p class="auth-header">Create a new account</p>              
+                            <input type="text" name="signup-name" class="signup-name">
+                            <label for="signup-name">Name:</label>            
+                            <input type="text" name="signup-email" class="signup-email">
+                            <label for="signup-email">Email:</label>            
+                            <input type="password" class="signup-password" name="signup-password">
+                            <label for="signup-password">Password:</label>                
+                            <input type="password" class="signup-confirm-password" name="signup-confirm-password">
+                            <label for="signup-confirm-password">Confirm password:</label>
+                            <button class="signup-btn">Sign up</button>
+                            <p class="action-here">Already have an account? <span class="login-here auth-link">Log in here</span>.</p>
+                            <p class="account-warning">This does not refer to your twitter account details. This is an account to allow you use extra features of the explore app.</p>
+                        </div>
+                        <div class="logout-div hide">
+                            <svg class="logout-div-close close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"/></svg>
+                            <button class="logout-btn">Log out</button>
                         </div>
                     </div>
                 </div>
