--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <link rel="stylesheet" href="./src/css/main.css">
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="/index.js" defer></script>
+    <script src="build/jwt-decode.min.js"></script>
+
+    <script type="module" src="index.js" defer></script>
+    <script type="module" src="/src/scripts/validators.js"></script>
 
     <title>Document</title>
 </head>
@@ -50,47 +53,16 @@
                     <div class="user-profile side-nav-item">
                         <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"/></svg>
                         <p class="user-profile-label">Log in</p>
-                        <!-- <div class="user-auth-div hide">
-                            <div class="login-div hide">
-                                <svg class="login-div-close close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"/></svg>
-                                <p class="auth-header">Sign in to your account</p>
-                                <label for="login-email">Email:</label>
-                                <input type="text" name="login-email" class="login-email">
-                                <label for="login-password">Password:</label>
-                                <input type="password" class="login-password" name="login-password">
-                                <button class="login-btn">Log in</button>
-                                <p class="action-here">Don't have an account? <span class="signup-here auth-link">Sign up here</span>.</p>
-                                <p class="account-warning">This does not refer to your twitter account details. This is an account to allow you use extra features of the explore app.</p>
-                            </div>
-                            <div class="signup-div hide">
-                                <svg class="signup-div-close close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"/></svg>
-                                <p class="auth-header">Create a new account</p>
-                                <label for="signup-name">Name:</label>
-                                <input type="text" name="signup-name" class="signup-name">
-                                <label for="signup-email">Email:</label>
-                                <input type="text" name="signup-email" class="signup-email">
-                                <label for="signup-password">Password:</label>
-                                <input type="password" class="signup-password" name="signup-password">
-                                <label for="signup-confirm-password">Confirm password:</label>
-                                <input type="password" class="signup-confirm-password" name="signup-confirm-password">
-                                <button class="signup-btn">Sign up</button>
-                                <p class="action-here">Already have an account? <span class="login-here auth-link">Log in here</span>.</p>
-                                <p class="account-warning">This does not refer to your twitter account details. This is an account to allow you use extra features of the explore app.</p>
-                            </div>
-                            <div class="logout-div hide">
-                                <svg class="logout-div-close close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"/></svg>
-                                <button class="logout-btn">Log out</button>
-                            </div>
-                        </div> -->
                     </div>
                     <div class="user-auth-div hide">
                         <div class="login-div hide">
                             <svg class="login-div-close close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"/></svg>
                             <p class="auth-header">Sign in to your account</p>                          
                             <input type="text" name="login-email" class="login-email">
-                            <label for="login-email">Email:</label>                           
+                            <label class="login-email-label" for="login-email">Email:</label>                           
                             <input type="password" class="login-password" name="login-password">
-                            <label for="login-password">Password:</label>
+                            <label class="login-password-label" for="login-password">Password:</label>
+                            <p class="login-errors auth-error"></p>
                             <button class="login-btn">Log in</button>
                             <p class="action-here">Don't have an account? <span class="signup-here auth-link">Sign up here</span>.</p>
                             <p class="account-warning">This does not refer to your twitter account details. This is an account to allow you use extra features of the explore app.</p>
