feat: ads signup functions and error handlers

--- a/index.html
+++ b/index.html
@@ -72,13 +72,14 @@
                         <svg class="signup-div-close close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"/></svg>
                         <p class="auth-header">Create a new account</p>              
                         <input type="text" name="signup-name" class="signup-name">
-                        <label for="signup-name">Name:</label>            
+                        <label class="signup-name-label" for="signup-name">Name:</label>            
                         <input type="text" name="signup-email" class="signup-email">
-                        <label for="signup-email">Email:</label>            
+                        <label class="signup-email-label" for="signup-email">Email:</label>            
                         <input type="password" class="signup-password" name="signup-password">
-                        <label for="signup-password">Password:</label>                
+                        <label class="signup-password-label" for="signup-password">Password:</label>                
                         <input type="password" class="signup-confirm-password" name="signup-confirm-password">
-                        <label for="signup-confirm-password">Confirm password:</label>
+                        <label class="signup-confirm-password-label" for="signup-confirm-password">Confirm password:</label>
+                        <p class="signup-errors auth-error"></p>
                         <button class="signup-btn">Sign up</button>
                         <p class="action-here">Already have an account? <span class="login-here auth-link">Log in here</span>.</p>
                         <p class="account-warning">This does not refer to your twitter account details. This is an account to allow you use extra features of the explore app.</p>
