--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="build/jwt-decode.min.js"></script>
+    <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
 
     <script type="module" src="index.js" defer></script>
     <script type="module" src="/src/scripts/validators.js"></script>
@@ -92,13 +93,14 @@
             </div>
 
             <div class="center-container">
-                <div class="home-search-page hide">
+                <div class="home-search-page">
                     <h1 class="home-logo">explore</h1>
                     <div class="main-search-input-div">
                         <input type="search" class="main-search-input" placeholder="Search for anything on twitter" autocomplete="off" autocorrect="off" autocapitalize="none" spellcheck="false" onkeydown = "if (event.keyCode == 13)
                         document.querySelector('#main-search-button').click()">
                         <span class="material-icons main-search-icon">search</span>
                     </div>
+                    <p class="main-search-error"></p>
                     <button class="main-search-button" id="main-search-button">Search</button>
                     <div class="search-choices">
                         <div class="language-choices">
@@ -129,7 +131,7 @@
                         </div>
                         <div class="tweet-type-choices">
                             <div class="recent-div">
-                                <input type="radio" class="tweet-type-choice" id="recent" name="tweet-type" value="en" checked>
+                                <input type="radio" class="tweet-type-choice" id="recent" name="tweet-type" value="recent" checked>
                                 <label for="recent">Recent tweets</label>
                             </div>
                             <div class="popular-div">
@@ -153,12 +155,12 @@
                     <button class="timeline-search-button" id="timeline-search-button">Search</button>
                 </div>
                 <div class="search-results">
-                    <div class="main-search-input-div">
+                    <div class="main-search-input-div hide">
                         <input type="search" class="main-search-input results-search-input" placeholder="Search for anything on twitter" autocomplete="off" autocorrect="off" autocapitalize="none" spellcheck="false" onkeydown = "if (event.keyCode == 13)
                         document.querySelector('#main-search-button').click()">
                         <span class="material-icons  main-search-icon">search</span>
                     </div>
-                    <div class="timeline-search-input-div">
+                    <div class="timeline-search-input-div hide">
                         <input type="search" class="timeline-search-input results-search-input" placeholder="Enter a username" autocomplete="off" autocorrect="off" autocapitalize="none" spellcheck="false" onkeydown = "if (event.keyCode == 13)
                         document.querySelector('#timeline-search-button').click()">
                         <span class="material-icons timeline-search-icon">search</span>
@@ -178,6 +180,13 @@
                                 <p class="tweet-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis doloribus dolores nesciunt ex omnis, veritatis inventore harum atque repudiandae facere, laboriosam beatae earum nisi pariatur quia natus nemo corrupti fugiat.</p>
                                 <div  class="tweet-image">
                                     <img src="./assets/lightning-5511473_640.jpg" alt="Tweet Media">
+                                </div>
+                                <div  class="tweet-image">
+                                    <video controls>
+                                        <source src="https://video.twimg.com/ext_tw_video/1300910729998991361/pu/vid/360x366/pX4ei4kPnH-cdB1C.mp4?tag=10"
+                                                type="video/mp4">
+                                        Sorry, your browser doesn't support embedded videos.
+                                    </video>
                                 </div>
                                 <div>
                                     <div class="tweet-footer">
