refactor: makes interactivity with search results its own function

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <span class="loader hide"></span>
     <!-- Modals -->
     <section>
-        <div class="save-to-collection-prompt modal">
+        <div class="save-to-collection-prompt modal hide">
             <svg class="save-to-collection-close close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"/></svg>
             <p class="save-to-collection-header">Your collections</p>
             <div class="save-to-collection-item-div">
@@ -124,7 +124,7 @@
             </div>
 
             <div class="center-container">
-                <div class="home-search-page hide">
+                <div class="home-search-page">
                     <h1 class="home-logo">explore</h1>
                     <div class="main-search-input-div">
                         <input type="search" class="main-search-input" placeholder="Search for anything on twitter" autocomplete="off" autocorrect="off" autocapitalize="none" spellcheck="false" onkeydown = "if (event.keyCode == 13)
@@ -185,7 +185,7 @@
                     </div>
                     <button class="timeline-search-button" id="timeline-search-button">Search</button>
                 </div>
-                <div class="collections-page">
+                <div class="collections-page hide">
                     <h1 class="collections-page-header">Your collections</h1>
                     <p class="collection-count">You currently have 5 collections</p>
                     <button class="create-collection-cta">
