feat: adds function to save a tweet to a collection

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                     </div>
                     <button class="timeline-search-button" id="timeline-search-button">Search</button>
                 </div>
-                <div class="collections-page hide">
+                <div class="collections-page ">
                     <h1 class="collections-page-header">Your collections</h1>
                     <p class="collection-count">You currently have 5 collections</p>
                     <button class="create-collection-cta">
@@ -241,7 +241,7 @@
                                             <p>Retweets:</p>
                                             <p>Likes:</p>
                                         </div>
-                                        <div class="save-to-collection">
+                                        <div class="save-to-collection" data-tweetId="tweet x">
                                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M17 3H7c-1.1 0-1.99.9-1.99 2L5 21l7-3 7 3V5c0-1.1-.9-2-2-2zm0 15l-5-2.18L7 18V5h10v13z"/></svg>
                                             <p>Save to collection</p>
                                             <!-- <div class="save-to-collection-prompt">
