change: adds placeholder to auth input divs

--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
                     <div class="login-div hide">
                         <svg class="login-div-close close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"/></svg>
                         <p class="auth-header">Sign in to your account</p>                          
-                        <input type="text" name="login-email" class="login-email">
+                        <input type="text" name="login-email" class="login-email" placeholder="Email">
                         <label class="login-email-label" for="login-email">Email:</label>                           
-                        <input type="password" class="login-password" name="login-password">
+                        <input type="password" class="login-password" name="login-password" placeholder="Password">
                         <label class="login-password-label" for="login-password">Password:</label>
                         <p class="login-errors auth-error"></p>
                         <button class="login-btn">Log in</button>
@@ -106,13 +106,13 @@
                     <div class="signup-div hide">
                         <svg class="signup-div-close close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"/></svg>
                         <p class="auth-header">Create a new account</p>              
-                        <input type="text" name="signup-name" class="signup-name">
+                        <input type="text" name="signup-name" class="signup-name" placeholder="Name">
                         <label class="signup-name-label" for="signup-name">Name:</label>            
-                        <input type="text" name="signup-email" class="signup-email">
+                        <input type="text" name="signup-email" class="signup-email" placeholder="Email">
                         <label class="signup-email-label" for="signup-email">Email:</label>            
-                        <input type="password" class="signup-password" name="signup-password">
+                        <input type="password" class="signup-password" name="signup-password" placeholder="Password">
                         <label class="signup-password-label" for="signup-password">Password:</label>                
-                        <input type="password" class="signup-confirm-password" name="signup-confirm-password">
+                        <input type="password" class="signup-confirm-password" name="signup-confirm-password" placeholder="Confirm password">
                         <label class="signup-confirm-password-label" for="signup-confirm-password">Confirm password:</label>
                         <p class="signup-errors auth-error"></p>
                         <button class="signup-btn">Sign up</button>
@@ -128,7 +128,7 @@
 
             <div class="center-container">
                 <div class="home-search-page">
-                    <h1 class="home-logo">explore</h1>
+                    <h1 class="home-logo">twtr &middot; spotlight</h1>
                     <div class="main-search-input-div">
                         <input type="search" class="main-search-input" placeholder="Search for anything on twitter" autocomplete="off" autocorrect="off" autocapitalize="none" spellcheck="false" onkeydown = "if (event.keyCode == 13)
                         document.querySelector('#main-search-button').click()">
@@ -181,7 +181,7 @@
                     </div>
                 </div>
                 <div class="timeline-search-page hide">
-                    <h1 class="timeline-header">explore <span class="timeline-subheader"> <span class="timeline-header-slash"> / </span> user timelines</span></h1>
+                    <h1 class="timeline-header">spotlight <span class="timeline-subheader"> <span class="timeline-header-slash"> / </span> user timelines</span></h1>
                     <div class="timeline-search-input-div">
                         <input type="search" class="timeline-search-input results-search-input" placeholder="Enter a username" autocomplete="off" autocorrect="off" autocapitalize="none" spellcheck="false" onkeydown = "if (event.keyCode == 13)
                         document.querySelector('#timeline-search-button').click()">
