feat: adds saved tweet indicator

--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
                 <div class="about-modal modal hide">
                     <svg class="about-modal-close close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"/></svg>
                     <!-- <p class="about-header">About </p> -->
-                    <p class ="about-text">explore-one is an app that simplifies searching for tweets on Twitter. You can also use the timeline search to get tweets from a specific user.<br><br>You can save tweets to collections to view later.</p>
+                    <p class ="about-text">twtr  &middot; spotlight is an app that simplifies searching for tweets on Twitter. You can also use the timeline search to get tweets from a specific user.<br><br>You can save tweets to collections to view later.</p>
                 </div>
                 <div class="user-profile side-nav-item">
                     <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"/></svg>
                     <p class="user-profile-label">Log in</p>
                 </div>
-                <div class="user-auth-div hide">
+                <div class="user-auth-div modal hide">
                     <div class="login-div hide">
                         <svg class="login-div-close close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"/></svg>
                         <p class="auth-header">Sign in to your account</p>                          
@@ -101,7 +101,7 @@
                         <p class="login-errors auth-error"></p>
                         <button class="login-btn">Log in</button>
                         <p class="action-here">Don't have an account? <span class="signup-here auth-link">Sign up here</span>.</p>
-                        <p class="account-warning">This does not refer to your twitter account details. This is an account to allow you use extra features of the explore app.</p>
+                        <p class="account-warning">This does not refer to your twitter account details. This is an account to allow you use extra features of the twtr  &middot; spotlight app.</p>
                     </div>
                     <div class="signup-div hide">
                         <svg class="signup-div-close close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"/></svg>
@@ -117,7 +117,7 @@
                         <p class="signup-errors auth-error"></p>
                         <button class="signup-btn">Sign up</button>
                         <p class="action-here">Already have an account? <span class="login-here auth-link">Log in here</span>.</p>
-                        <p class="account-warning">This does not refer to your twitter account details. This is an account to allow you use extra features of the explore app.</p>
+                        <p class="account-warning">This does not refer to your twitter account details. This is an account to allow you use extra features of the twtr  &middot; spotlight app.</p>
                     </div>
                     <div class="logout-div hide">
                         <svg class="logout-div-close close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"/></svg>
