change: adds 50px top margin to sidenav and collections page

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                     <button class="timeline-search-button" id="timeline-search-button">Search</button>
                 </div>
                 <div class="collections-page hide">
-                    <h1 class="collections-page-header">Your collections</h1>
+                    <!-- <h1 class="collections-page-header">Your collections</h1> -->
                     <p class="collection-count">Please login to use this feature</p>
                     <button class="create-collection-cta">
                         Create a new collection
