--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <link rel="stylesheet" href="./src/css/reset.css">
     <link rel="stylesheet" href="./src/css/main.css">
+    <!-- <link rel="stylesheet" href="./src/css/prefixer.css"> -->
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="build/jwt-decode.min.js"></script>
